# pet-project

./: .env  dev-compose.yaml
homew/: pyproject.toml
homew/bd_data/pgdata/base/1/: 1259  2619  2619_vm
homew/bd_data/pgdata/global/: 1260  pg_control  pg_internal.init
homew/bd_data/pgdata/pg_stat/: pgstat.stat
homew/bd_data/pgdata/pg_xact/: 0000
homew/itweb/itweb/: settings.py
homew/itweb/main/: admin.py  urls.py  views.py
homew/itweb/main/migrations/: 0004_profile.py  0005_rename_birth_location_author_born_location_and_more.py  0006_alter_quote_author.py
homew/itweb/main/static/main/css/: main.css
homew/itweb/main/templates/main/: authors.html  index.html
homew/itweb/user/static/user/css/: first.css  main.css  second.css
homew/itweb/user/templates/user/: add_news.html  add_quote.html  create.html  delete_author.html  delete_quote.html  login.html  profile.html  update_author.html  update_quote.html  userauthor.html  userhome.html  usernews.html  userquote.html
itweb/: manage.py
itweb/itweb/: asgi.py  urls.py  wsgi.py
itweb/main/: models.py
itweb/main/migrations/: 0001_initial.py  0002_alter_articles_options_articles_name_author_and_more.py  0003_alter_articles_name_author.py  0007_alter_author_born_date.py
itweb/main/templates/main/: def.html  news.html  quotes.html
itweb/user/: forms.py  middleware.py  urls.py  views.py
itweb/user/templates/user/: add_author.html  author_detail.html  delete_news.html  news_detail.html  update_news.html  userdef.html
