[tool.poetry]
name = "homew"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Dan1k <sv.dan1kk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "^5.1"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
